--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.0",
+    "nodemon": "^1.18.3",
     "pg": "^7.4.3"
   }
 }
