--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "jest": "^23.5.0",
     "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.0",
     "nodemon": "^1.18.3",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "supertest": "^3.1.0"
   }
 }
